--- a/training_configs/llama-3-8b-instruct-simpo-codeUltrafeedback.yaml
+++ b/training_configs/llama-3-8b-instruct-simpo-codeUltrafeedback.yaml
@@ -1,27 +1,17 @@
 # Model arguments
 # model_name_or_path: meta-llama/Meta-Llama-3-8B-Instruct
 model_name_or_path: /tf/model/Llama3/Meta-Llama-3-8B-Instruct
-# model_name_or_path: /tf/orion.zou/repos/SimPO/outputs/llama-3-8b-instruct-simpo-aflow-3
 
 torch_dtype: null
 attn_implementation: flash_attention_2
 
 # Data training arguments
-
 dataset_mixer:
-  /tf/orion.zou/dataset/aflow_v3_2/pair_wise/aflow_v3_2_paw_full_train_21785_transformed.json: 1.0
-  /tf/orion.zou/dataset/aflow_v3_2/pair_wise/aflow_v3_2_paw_full_test_2494_transformed.json: 1.0
+  gyzou/codeUltraFeedback-pairwise-python: 1.0
 dataset_splits:
 - train
 - test
 preprocessing_num_workers: 12
-
-# dataset_mixer:
-#   princeton-nlp/llama3-ultrafeedback: 1.0
-# dataset_splits:
-# - train
-# - test
-# preprocessing_num_workers: 12
 
 # SimPOTrainer arguments
 bf16: true
@@ -30,7 +20,7 @@ gamma_beta_ratio: 0.55
 do_eval: true
 evaluation_strategy: steps
 eval_steps: 400
-gradient_accumulation_steps: 32 
+gradient_accumulation_steps: 16 
 gradient_checkpointing: true
 gradient_checkpointing_kwargs:
   use_reentrant: False
@@ -43,8 +33,8 @@ max_length: 2048
 max_prompt_length: 1800
 num_train_epochs: 1
 optim: adamw_torch
-output_dir: outputs/llama-3-8b-instruct-simpo-aflow-3.1
-run_name: llama-3-8b-instruct-simpo-aflow-3
+output_dir: outputs/llama-3-8b-instruct-simpo-codeUltrafeedback
+run_name: llama-3-8b-instruct-simpo-codeUltrafeedback
 per_device_train_batch_size: 1
 per_device_eval_batch_size: 1
 push_to_hub: false
